@@ -48,6 +48,10 @@
 		<label for="tx_egovapi_website">###LABEL_WEBSITE###</label>
 		<input type="text" id="tx_egovapi_website" name="tx_egovapi_pi3[website]" value="###WEBSITE###" />
 	</div>
+	<div id="tx_egovapi_generatorForm_allVersions">
+		<label for="tx_egovapi_all_versions">###LABEL_ALL_VERSIONS###</label>
+		<input type="checkbox" id="tx_egovapi_all_versions" name="tx_egovapi_pi3[all_versions]" value="1" />
+	</div>
 	<input type="hidden" id="tx_egovapi_ajaxUrl" value="###AJAX_URL###" />
 	<input type="hidden" id="tx_egovapi_defaultLanguage" value="###LANGUAGE###" />
 	<input type="hidden" id="tx_egovapi_defaultOrganization" value="###ORGANIZATION###" />
