@@ -1,6 +1,7 @@
 2012-05-02  Xavier Perseguers  <xavier@causal.ch>
 
-	* [TASK] Automatically populate organization's website
+	* [FEATURE] Let user decide whether all service versions should be retrieved (slower)
+	* [FEATURE] Automatically populate organization's website
 	* [TASK] Communities should be sorted alphabetically
 
 2012-05-01  Xavier Perseguers  <xavier@causal.ch>
